# ModuloSalasYPrestamos

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_desplieguebackproyecto.yml
Exceptions/: customException.py
RecreativeElement/: apps.py  models.py  serializers.py  views.py
RecreativeElement/migrations/: 0001_initial.py
Register/: models.py  serializers.py  views.py
Register/migrations/: 0001_initial.py  0002_initial.py  0003_register_admin_comment.py
Reservation/: models.py  serializer.py  views.py
Reservation/migrations/: 0001_initial.py  0002_initial.py  0003_alter_reservation_id.py  0004_alter_reservation_id.py  0005_remove_reservation_start_time_and_more.py  0006_alter_reservationxelements_options_and_more.py
Room/: models.py  serializer.py  test_room.py  views.py
Room/migrations/: 0001_initial.py  0002_room_availability.py  0003_alter_room_id.py  0004_alter_room_id.py  0005_remove_room_state.py
User/: models.py  roles.py  serializers.py  views.py
User/migrations/: 0001_initial.py
config/: settings.py  urls.py
